--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "aos": "^3.0.0-beta.6",
     "axios": "^1.7.9",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
@@ -17,7 +18,8 @@
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
     "react-router-dom": "^7.0.2",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "recharts": "^2.15.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
