--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,9 +13,11 @@
     "axios": "^1.7.9",
     "leaflet": "^1.9.4",
     "react": "^18.3.1",
+    "react-circular-progressbar": "^2.1.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.4.0",
     "react-leaflet": "^4.2.1",
+    "react-native-circular-progress-indicator": "^4.4.2",
     "react-router-dom": "^7.0.2",
     "react-toastify": "^11.0.2"
   },
